# plasma-widget-notification-sidebar

./: CMakeLists.txt  INSTALL  README.md
lib/: CMakeLists.txt
plasmoid/: metadata.desktop
plasmoid/contents/config/: main.xml
plasmoid/contents/ui/: ConfigGeneral.qml  FocusWatcher.qml  Jobs.qml  NotificationDelegate.qml  NotificationIcon.qml  NotificationPopup.qml  Notifications.qml  ScreenPositionSelector.qml  SidePanel.qml  configNotifications.qml  main.qml
plugin/: CMakeLists.txt  qmldir
translations/: CMakeLists.txt  TRANSLATORS.README  es_ES.po  extract-and-merge-messages.sh  plasma-widget-notification-sidebar.pot
